# poc-offtake-parser

./: Cargo.toml  EUC_Definitions_22_v1.xlsx  docs.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/backtrace_ext/: all.html  fn.short_frames_strict.html  index.html
docs/brownstone/: all.html  index.html  macro.build.html
docs/bytecount/: all.html  fn.count.html  fn.naive_count.html  fn.naive_count_32.html  fn.naive_num_chars.html  fn.num_chars.html  index.html
docs/chrono/: all.html  enum.Month.html  enum.Weekday.html  index.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.OutOfRangeError.html
docs/gimli/: enum.UnitSectionOffset.html
docs/indent_write/: all.html  index.html
docs/is_ci/: all.html  fn.cached.html  fn.is_ci.html  fn.uncached.html  index.html
docs/joinery/: all.html  index.html
docs/miette/: all.html  derive.Diagnostic.html  enum.MietteError.html  enum.RgbColors.html  enum.Severity.html  fn.set_hook.html  fn.set_panic_hook.html  index.html  macro.bail.html  macro.diagnostic.html  macro.ensure.html  macro.miette.html  sidebar-items.js  struct.DebugReportHandler.html  struct.Error.html  struct.GraphicalReportHandler.html  struct.GraphicalTheme.html  struct.InstallError.html  struct.JSONReportHandler.html  struct.LabeledSpan.html  struct.MietteDiagnostic.html  struct.MietteHandler.html  struct.MietteHandlerOpts.html  struct.MietteSpanContents.html  struct.NamedSource.html  struct.NarratableReportHandler.html  (+15 more)
src/: AUC.txt  SNCWV22.txt  errors.rs  main.rs  models.rs
(+1301 files in other folders)
