[package]
name = "poc-offtake-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
miette = { version = "5.9.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = {version = "0.8.0"}
nom_locate = "4.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
